<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChonAnh"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <ImageView
        android:id="@+id/imgViewSuaTB"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/maThietBi"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/edtFixMaTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:enabled="false"
            android:background="@null"
            android:paddingLeft="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/tenThietBi"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/edtFixTenTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:background="@null"
            android:paddingLeft="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/xuatXu"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/edtFixXuatXu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/loai"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>

        <Spinner
            android:id="@+id/spnLoaiTB"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="22sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10sp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLuu_Fix"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="60sp"
            android:background="@drawable/round_button_1"
            android:padding="10dp"
            android:text="@string/btnLuu"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHuy_Fix"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_1"
            android:padding="10dp"
            android:text="@string/btnHuy"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </LinearLayout>

</LinearLayout>