<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:text="@string/maPhong"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/edtMaPhong_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:background="@null"
            android:enabled="false"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:text="@string/loaiPhong"
            android:textSize="22sp"
            />

        <EditText
            android:id="@+id/edtTenPhong_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:background="@null"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:text="@string/tang"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/edtTang_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="numberDecimal"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10sp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLuu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="60sp"
            android:background="@drawable/round_button_1"
            android:padding="10dp"
            android:text="@string/btnLuu"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHuy"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_1"
            android:padding="10dp"
            android:text="@string/btnHuy"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </LinearLayout>

</LinearLayout>