<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/maLoai"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/edtMaLoai_DT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="22sp"
            android:enabled="false"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@drawable/round_border">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/tenLoai"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/edtTenLoai_DT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="22sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10sp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLuu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="60sp"
            android:background="@drawable/round_button_1"
            android:padding="10dp"
            android:text="@string/btnLuu"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHuy"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_1"
            android:padding="10dp"
            android:text="@string/btnHuy"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </LinearLayout>
</LinearLayout>